templates/python-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: python
  labels:
    app: python
spec:
  containers:
    - name: python
      image: python:latest
      command: ["/bin/sleep", "3650d"]
      imagePullPolicy: IfNotPresent
  restartPolicy: Always
