templates/ns2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress99
  namespace: test1
spec:
  rules:
    - host: "web1.example.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: web1
                port:
                  number: 8080
